--- a/aboutMe.html
+++ b/aboutMe.html
@@ -86,7 +86,8 @@
             <h3>Contact Info </h3>          
             <p>* My email: </a>janettetovarj@gmail.com</p>
             <p>* My LinkedIn Profile:<a href="https://www.linkedin.com/in/janette-tovar-35ba8325b"> LinkedIn</a> </p>
-            <p> © Janette Tovar Jara. All Rights Reserved</p>
+            <p> © Janette Tovar|All Rights Reserved</p>
                 
     </body>
 </html>
+
